--- a/PracticeMicroservice.Web/appsettings.json
+++ b/PracticeMicroservice.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7231"
+    "ProductAPI": "https://localhost:7231",
+    "IdentityAPI": "https://localhost:44395"
   } 
 }
