wip - shopping cart

--- a/PracticeMicroservice.Services.ShoppingCartAPI/appsettings.json
+++ b/PracticeMicroservice.Services.ShoppingCartAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    // "DefaultConnection": "Data Source=DESKTOP-75U93I4\\SQLEXPRESS;Database=microShopingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DESKTOP-29Q93C5;Database=microShopingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
