--- a/PracticeMicroservice.Web/appsettings.json
+++ b/PracticeMicroservice.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7231",
-    "IdentityAPI": "https://localhost:44395"
+    "IdentityAPI": "https://localhost:44395",
+    "ShoppingCartAPI": "https://localhost:7269"
   } 
 }
